// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render empty Url 1`] = `
<div>
  No data available for 
</div>
`;

exports[`Should render full Url 1`] = `
Array [
  <div>
    <div
      className="jumbotron"
      style={
        Object {
          "height": 100,
          "marginBottom": 10,
          "marginTop": 10,
          "paddingTop": 20,
        }
      }
    >
      <h4>
        <a
          href="https://www.lemonde.fr"
          rel="noreferrer noopener"
          target="_blank"
        >
          https://www.lemonde.fr
        </a>
      </h4>
      <p>
        <a
          href="/category/presse"
          onClick={[Function]}
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            presse
          </span>
        </a>
        <a
          href="/tag/actu"
          onClick={[Function]}
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            actu
          </span>
        </a>
        <a
          href="/tag/fr"
          onClick={[Function]}
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            fr
          </span>
        </a>
        <span
          title="2021-04-04T13:30:42.164Z"
        >
          <svg
            fill="none"
            height={12}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={12}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          Mise à jour il y a :
           
          1 jour
        </span>
      </p>
    </div>
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        LightHouse
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Informations collectées par l'outil Google LightHouse
        </span>
        <a
          href="/report/aHR0cHM6Ly93d3cubGVtb25kZS5mcg==/lhr.html"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <div
          className="row"
        >
          <div
            className="text-center mb-3 col-lg-3 col-md-6 col-12"
          >
            <div
              className="card"
            >
              <div>
                io
              </div>
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                >
                  Accessibility
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "2rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  94%
                </div>
              </div>
            </div>
          </div>
          <div
            className="text-center mb-3 col-lg-3 col-md-6 col-12"
          >
            <div
              className="card"
            >
              <div>
                io
              </div>
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                >
                  Performance
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "2rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  49%
                </div>
              </div>
            </div>
          </div>
          <div
            className="text-center mb-3 col-lg-3 col-md-6 col-12"
          >
            <div
              className="card"
            >
              <div>
                io
              </div>
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                >
                  SEO
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "2rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  99%
                </div>
              </div>
            </div>
          </div>
          <div
            className="text-center mb-3 col-lg-3 col-md-6 col-12"
          >
            <div
              className="card"
            >
              <div>
                io
              </div>
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                >
                  Best Practices
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "2rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  100%
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-3"
          >
            <div
              className="text-center card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "0.9rem",
                    }
                  }
                >
                  First contentful Paint
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "1.5rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  5.4s
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-3"
          >
            <div
              className="text-center card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "0.9rem",
                    }
                  }
                >
                  Time to interactive
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "1.5rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  9.5s
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-3"
          >
            <div
              className="text-center card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "0.9rem",
                    }
                  }
                >
                  Total requests
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "1.5rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  77
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-3"
          >
            <div
              className="text-center card"
            >
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "0.9rem",
                    }
                  }
                >
                  Total weight
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "1.5rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  1.5Mb
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        Dependabot
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Scan des vulnérabiliés du dépôt Github https://github.com/lemonde/site-ui
        </span>
        <a
          href="https://github.com/lemonde/site-ui"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                className="text-center"
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                Sévérité
              </th>
              <th>
                Dépendance vulnérable
              </th>
              <th>
                Vulnérabilités
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  HIGH
                </span>
              </td>
              <td>
                is-svg
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-28092"
                  >
                    CVE-2021-28092
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-7r28-3m3f-r2pr"
                  >
                    GHSA-7r28-3m3f-r2pr
                  </a>
                  <br />
                </p>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        Dependabot
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Scan des vulnérabiliés du dépôt Github https://github.com/lemonde/site-api
        </span>
        <a
          href="https://github.com/lemonde/site-api"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                className="text-center"
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                Sévérité
              </th>
              <th>
                Dépendance vulnérable
              </th>
              <th>
                Vulnérabilités
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  HIGH
                </span>
              </td>
              <td>
                is-svg
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-28092"
                  >
                    CVE-2021-28092
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-7r28-3m3f-r2pr"
                  >
                    GHSA-7r28-3m3f-r2pr
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  HIGH
                </span>
              </td>
              <td>
                pug
              </td>
              <td>
                <p>
                  <a
                    href="https://github.com/pugjs/pug/security/advisories/GHSA-p493-635q-r6gr"
                  >
                    GHSA-p493-635q-r6gr
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-21353"
                  >
                    CVE-2021-21353
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-p493-635q-r6gr"
                  >
                    GHSA-p493-635q-r6gr
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  HIGH
                </span>
              </td>
              <td>
                is-svg
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-28092"
                  >
                    CVE-2021-28092
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-7r28-3m3f-r2pr"
                  >
                    GHSA-7r28-3m3f-r2pr
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  HIGH
                </span>
              </td>
              <td>
                ssri
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-27290"
                  >
                    CVE-2021-27290
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-vx3p-948g-6vhq"
                  >
                    GHSA-vx3p-948g-6vhq
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  HIGH
                </span>
              </td>
              <td>
                ssri
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2021-27290"
                  >
                    CVE-2021-27290
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-vx3p-948g-6vhq"
                  >
                    GHSA-vx3p-948g-6vhq
                  </a>
                  <br />
                </p>
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  MODERATE
                </span>
              </td>
              <td>
                node-notifier
              </td>
              <td>
                <p>
                  <a
                    href="https://nvd.nist.gov/vuln/detail/CVE-2020-7789"
                  >
                    CVE-2020-7789
                  </a>
                  <br />
                </p>
                <p>
                  <a
                    href="https://github.com/advisories/GHSA-5fw9-fq32-wv5p"
                  >
                    GHSA-5fw9-fq32-wv5p
                  </a>
                  <br />
                </p>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        Temps de réponse
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Informations collectées par updown.io
        </span>
        <a
          href="https://updown.io/abc"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <div
          className="row"
        >
          <div
            className="text-center mb-3 col-lg-3 col-md-6 col-12"
          >
            <div
              className="card"
            >
              <div>
                io
              </div>
              <div
                className="card-body"
              >
                <div
                  className="card-title h5"
                >
                  Taux de disponibilité sur un mois glissant
                </div>
                <div
                  className="card-title h5"
                  style={
                    Object {
                      "fontSize": "2rem",
                      "fontWeight": "bold",
                    }
                  }
                >
                  0.98%
                </div>
              </div>
            </div>
          </div>
          <div
            className="text-center mb-3 col-lg-3 col-md-6 col-12"
          />
        </div>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        SSL
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Informations collectées via testssl.sh
        </span>
        <a
          href="/report/aHR0cHM6Ly93d3cubGVtb25kZS5mcg==/testssl.html"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <div
          className="row"
        >
          <div
            className="col"
          >
            <h3>
              Scan Summary : 
              <span
                className="badge badge-success"
                style={
                  Object {
                    "fontSize": "1.1em",
                    "minWidth": 60,
                  }
                }
              >
                A+
              </span>
            </h3>
            <br />
          </div>
        </div>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        HTTP
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Informations collectées par le Mozilla HTTP observatory
        </span>
        <a
          href="https://observatory.mozilla.org/analyze/www.lemonde.fr"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <h3>
          Scan Summary : 
          <span
            className="badge badge-danger"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            F
          </span>
        </h3>
        <br />
        <br />
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                impact
              </th>
              <th>
                id
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <span
                  className="w-100 badge badge-danger"
                >
                  50
                </span>
              </td>
              <td>
                subresource-integrity
              </td>
              <td>
                Subresource Integrity (SRI) not implemented, and external scripts are loaded over HTTP or use protocol-relative URLs via src="//..."
              </td>
            </tr>
            <tr>
              <td>
                <span
                  className="w-100 badge badge-warning"
                >
                  25
                </span>
              </td>
              <td>
                content-security-policy
              </td>
              <td>
                Content Security Policy (CSP) header not implemented
              </td>
            </tr>
            <tr>
              <td>
                <span
                  className="w-100 badge badge-success"
                >
                  5
                </span>
              </td>
              <td>
                x-content-type-options
              </td>
              <td>
                X-Content-Type-Options header not implemented
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        Nuclei
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Détection d'erreurs de configuration et vulnérabilités
        </span>
      </div>
      <div
        className="card-body"
      >
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                severity
              </th>
              <th>
                id
              </th>
              <th>
                name
              </th>
              <th>
                matcher
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <span
                  className="w-100 badge badge-success"
                >
                  info
                </span>
              </td>
              <td>
                waf-detect
              </td>
              <td>
                WAF Detection
              </td>
              <td>
                varnish
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        Third parties
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Scripts tiers embarqués dans la page web
        </span>
      </div>
      <div
        className="card-body"
      >
        <table
          className="table table-striped table-bordered table-hover"
          style={
            Object {
              "marginBottom": 10,
            }
          }
        >
          <thead>
            <tr>
              <th
                className="bg-dark text-white"
                colSpan={4}
              >
                Cookies
              </th>
            </tr>
            <tr>
              <th>
                name
              </th>
              <th>
                domain
              </th>
              <th
                className="text-center"
              >
                httpOnly
              </th>
              <th
                className="text-center"
              >
                secure
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                atauthority
              </td>
              <td>
                www.lemonde.fr
              </td>
              <td
                className="text-center"
              >
                ❌
              </td>
              <td
                className="text-center"
              >
                ❌
              </td>
            </tr>
            <tr>
              <td>
                critical-home-free-desktop
              </td>
              <td>
                www.lemonde.fr
              </td>
              <td
                className="text-center"
              >
                ❌
              </td>
              <td
                className="text-center"
              >
                ✔️
              </td>
            </tr>
            <tr>
              <td>
                lmd_gdpr_token
              </td>
              <td>
                .lemonde.fr
              </td>
              <td
                className="text-center"
              >
                ❌
              </td>
              <td
                className="text-center"
              >
                ✔️
              </td>
            </tr>
          </tbody>
        </table>
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                className="bg-dark text-white"
                colSpan={3}
              >
                Third-parties ressources
              </th>
            </tr>
            <tr>
              <th>
                type
              </th>
              <th>
                url
              </th>
              <th>
                remédiation
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/js/tcfv2-stub.min.js"
                >
                  cmp.lemonde.fr/js/tcfv2-s...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/js/lemonde.min.js"
                >
                  cmp.lemonde.fr/js/lemonde...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://img.lemde.fr/2021/04/02/0/0/4000/2666/664/0/75/0/80b8526_136142555-619168.jpg"
                >
                  img.lemde.fr/2021/04/02/0...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://img.lemde.fr/2021/03/23/0/0/0/0/116/116/75/0/3e006b9_1616516956189-vignette-podcast-lheuredumonde-sansspotify.png"
                >
                  img.lemde.fr/2021/03/23/0...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/css/lemonde/standard.min.css"
                >
                  cmp.lemonde.fr/css/lemond...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/html/lemonde/standard.html"
                >
                  cmp.lemonde.fr/html/lemon...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://img.lemde.fr/2017/09/22/0/0/0/0/100/100/60/0/ae2f702_132.jpg"
                >
                  img.lemde.fr/2017/09/22/0...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://img.lemde.fr/2019/04/26/0/0/0/0/100/100/60/0/1e0a0e9_weQmmge_eFXEtqQepYSZaTqW.jpg"
                >
                  img.lemde.fr/2019/04/26/0...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/fonts/marr-sans/MarrSans-Semibold-Web.woff2"
                >
                  cmp.lemonde.fr/fonts/marr...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/fonts/marr-sans/MarrSans-Regular-Web.woff2"
                >
                  cmp.lemonde.fr/fonts/marr...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/fonts/marr-sans/MarrSans-Medium-Web.woff2"
                >
                  cmp.lemonde.fr/fonts/marr...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/fonts/the-antiqua-b/TheAntiquaB_LT_500.woff2"
                >
                  cmp.lemonde.fr/fonts/the-...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/fonts/the-antiqua-b/TheAntiquaB_LT_700.woff2"
                >
                  cmp.lemonde.fr/fonts/the-...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://cmp.lemonde.fr/fonts/marr-sans-condensed/MarrSansCondensed-Medium-Web.woff2"
                >
                  cmp.lemonde.fr/fonts/marr...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://img.lemde.fr/2021/04/03/0/0/3499/2333/114/0/75/0/fecec11_none-soccer-england-ars-liv-report-0403-11.JPG"
                >
                  img.lemde.fr/2021/04/03/0...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                amplitude.com
              </td>
              <td>
                <a
                  href="https://cdn.amplitude.com/libs/amplitude-4.2.1-min.gz.js"
                >
                  cdn.amplitude.com/libs/am...
                </a>
              </td>
              <td>
                Use hosted Matomo instance
              </td>
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://buf.lemonde.fr/lmd?s=489989&vc=false&vm=exempt&ts=1617543091388&vtag=5.28.1&ptag=js&r=800x600x24x24&re=800x600&p=Home::Beta::::Home&s2=5&stc=%7B%22Pagetype%22%3A%22Home%22%2C%22Population%22%3A%22Gratuit%22%2C%22Producteur%22%3A%22Edito%22%2C%22ir%22%3A%22false%22%2C%22consent%22%3A%22not%20found%22%2C%22consent%20AT%22%3A%22false%22%7D&ref="
                >
                  buf.lemonde.fr/lmd?s=4899...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://buf.lemonde.fr/lmd?s=489989&vc=false&vm=exempt&ts=1617543091491&vtag=5.28.1&ptag=js&r=800x600x24x24&re=800x600&ati=PUB-[cmp%20standard]-------&type=AT"
                >
                  buf.lemonde.fr/lmd?s=4899...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://buf.lemonde.fr/lmd?s=489989&vc=false&vm=exempt&ts=1617543091388&vtag=5.28.1&ptag=js&r=800x600x24x24&re=800x600&p=Home::Beta::::Home&s2=5&stc=%7B%22Pagetype%22%3A%22Home%22%2C%22Population%22%3A%22Gratuit%22%2C%22Producteur%22%3A%22Edito%22%2C%22ir%22%3A%22false%22%2C%22consent%22%3A%22not%20found%22%2C%22consent%20AT%22%3A%22false%22%7D&ref=&Rdt=On"
                >
                  buf.lemonde.fr/lmd?s=4899...
                </a>
              </td>
              <td />
            </tr>
            <tr>
              <td>
                unknown
              </td>
              <td>
                <a
                  href="https://buf.lemonde.fr/lmd?s=489989&vc=false&vm=exempt&ts=1617543091491&vtag=5.28.1&ptag=js&r=800x600x24x24&re=800x600&ati=PUB-[cmp%20standard]-------&type=AT&Rdt=On"
                >
                  buf.lemonde.fr/lmd?s=4899...
                </a>
              </td>
              <td />
            </tr>
          </tbody>
        </table>
        <table
          className="table table-striped table-bordered table-hover"
          style={
            Object {
              "marginBottom": 10,
            }
          }
        >
          <thead>
            <tr>
              <th
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                Flag
              </th>
              <th>
                Hostname
              </th>
              <th>
                IP
              </th>
              <th>
                City
              </th>
              <th>
                Country
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="text-center"
              >
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 0 513 342"
                >
                  <title>
                    États-Unis
                  </title>
                  <path
                    d="M0 0h513v342H0z"
                    fill="#FFF"
                  />
                  <g
                    fill="#D80027"
                  >
                    <path
                      d="M0 0h513v38H0zM0 76h513v38H0zM0 152h513v38H0zM0 228h513v38H0zM0 304h513v38H0z"
                    />
                  </g>
                  <path
                    d="M0 0h256.5v190H0z"
                    fill="#2E52B2"
                  />
                  <g
                    fill="#FFF"
                  >
                    <path
                      d="M47.8 141.9l-4-12.8-4.3 12.8H26.3l10.7 7.7-4 12.8 10.8-7.9 10.7 7.9-4.2-12.8 10.9-7.7zM104.2 141.9l-4.1-12.8-4.2 12.8H82.7l10.7 7.7-4.1 12.8 10.8-7.9 10.7 7.9-4-12.8 10.8-7.7zM160.6 141.9l-4.2-12.8-4 12.8h-13.5l10.9 7.7-4.2 12.8 10.8-7.9 10.9 7.9-4.2-12.8 10.8-7.7zM216.9 141.9l-4.1-12.8-4.2 12.8h-13.2l10.7 7.7-4 12.8 10.7-7.9 10.8 7.9-4.2-12.8 10.9-7.7zM100.1 78.3l-4.2 12.8H82.7L93.4 99l-4.1 12.6 10.8-7.8 10.7 7.8-4-12.6 10.8-7.9h-13.4zM43.8 78.3l-4.3 12.8H26.3L37 99l-4 12.6 10.8-7.8 10.7 7.8L50.3 99l10.9-7.9H47.8zM156.4 78.3l-4 12.8h-13.5l10.9 7.9-4.2 12.6 10.8-7.8 10.9 7.8-4.2-12.6 10.8-7.9h-13.3zM212.8 78.3l-4.2 12.8h-13.2l10.7 7.9-4 12.6 10.7-7.8 10.8 7.8-4.2-12.6 10.9-7.9h-13.4zM43.8 27.7l-4.3 12.6H26.3L37 48.2l-4 12.7L43.8 53l10.7 7.9-4.2-12.7 10.9-7.9H47.8zM100.1 27.7l-4.2 12.6H82.7l10.7 7.9-4.1 12.7 10.8-7.9 10.7 7.9-4-12.7 10.8-7.9h-13.4zM156.4 27.7l-4 12.6h-13.5l10.9 7.9-4.2 12.7 10.8-7.9 10.9 7.9-4.2-12.7 10.8-7.9h-13.3zM212.8 27.7l-4.2 12.6h-13.2l10.7 7.9-4 12.7 10.7-7.9 10.8 7.9-4.2-12.7 10.9-7.9h-13.4z"
                    />
                  </g>
                </svg>
              </td>
              <td>
                www.lemonde.fr
              </td>
              <td>
                151.101.210.217
              </td>
              <td>
                Newark
              </td>
              <td>
                États-Unis
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 0 513 342"
                >
                  <title>
                    États-Unis
                  </title>
                  <path
                    d="M0 0h513v342H0z"
                    fill="#FFF"
                  />
                  <g
                    fill="#D80027"
                  >
                    <path
                      d="M0 0h513v38H0zM0 76h513v38H0zM0 152h513v38H0zM0 228h513v38H0zM0 304h513v38H0z"
                    />
                  </g>
                  <path
                    d="M0 0h256.5v190H0z"
                    fill="#2E52B2"
                  />
                  <g
                    fill="#FFF"
                  >
                    <path
                      d="M47.8 141.9l-4-12.8-4.3 12.8H26.3l10.7 7.7-4 12.8 10.8-7.9 10.7 7.9-4.2-12.8 10.9-7.7zM104.2 141.9l-4.1-12.8-4.2 12.8H82.7l10.7 7.7-4.1 12.8 10.8-7.9 10.7 7.9-4-12.8 10.8-7.7zM160.6 141.9l-4.2-12.8-4 12.8h-13.5l10.9 7.7-4.2 12.8 10.8-7.9 10.9 7.9-4.2-12.8 10.8-7.7zM216.9 141.9l-4.1-12.8-4.2 12.8h-13.2l10.7 7.7-4 12.8 10.7-7.9 10.8 7.9-4.2-12.8 10.9-7.7zM100.1 78.3l-4.2 12.8H82.7L93.4 99l-4.1 12.6 10.8-7.8 10.7 7.8-4-12.6 10.8-7.9h-13.4zM43.8 78.3l-4.3 12.8H26.3L37 99l-4 12.6 10.8-7.8 10.7 7.8L50.3 99l10.9-7.9H47.8zM156.4 78.3l-4 12.8h-13.5l10.9 7.9-4.2 12.6 10.8-7.8 10.9 7.8-4.2-12.6 10.8-7.9h-13.3zM212.8 78.3l-4.2 12.8h-13.2l10.7 7.9-4 12.6 10.7-7.8 10.8 7.8-4.2-12.6 10.9-7.9h-13.4zM43.8 27.7l-4.3 12.6H26.3L37 48.2l-4 12.7L43.8 53l10.7 7.9-4.2-12.7 10.9-7.9H47.8zM100.1 27.7l-4.2 12.6H82.7l10.7 7.9-4.1 12.7 10.8-7.9 10.7 7.9-4-12.7 10.8-7.9h-13.4zM156.4 27.7l-4 12.6h-13.5l10.9 7.9-4.2 12.7 10.8-7.9 10.9 7.9-4.2-12.7 10.8-7.9h-13.3zM212.8 27.7l-4.2 12.6h-13.2l10.7 7.9-4 12.7 10.7-7.9 10.8 7.9-4.2-12.7 10.9-7.9h-13.4z"
                    />
                  </g>
                </svg>
              </td>
              <td>
                cmp.lemonde.fr
              </td>
              <td>
                35.190.31.19
              </td>
              <td>
                Kansas City
              </td>
              <td>
                États-Unis
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 0 513 342"
                >
                  <title>
                    États-Unis
                  </title>
                  <path
                    d="M0 0h513v342H0z"
                    fill="#FFF"
                  />
                  <g
                    fill="#D80027"
                  >
                    <path
                      d="M0 0h513v38H0zM0 76h513v38H0zM0 152h513v38H0zM0 228h513v38H0zM0 304h513v38H0z"
                    />
                  </g>
                  <path
                    d="M0 0h256.5v190H0z"
                    fill="#2E52B2"
                  />
                  <g
                    fill="#FFF"
                  >
                    <path
                      d="M47.8 141.9l-4-12.8-4.3 12.8H26.3l10.7 7.7-4 12.8 10.8-7.9 10.7 7.9-4.2-12.8 10.9-7.7zM104.2 141.9l-4.1-12.8-4.2 12.8H82.7l10.7 7.7-4.1 12.8 10.8-7.9 10.7 7.9-4-12.8 10.8-7.7zM160.6 141.9l-4.2-12.8-4 12.8h-13.5l10.9 7.7-4.2 12.8 10.8-7.9 10.9 7.9-4.2-12.8 10.8-7.7zM216.9 141.9l-4.1-12.8-4.2 12.8h-13.2l10.7 7.7-4 12.8 10.7-7.9 10.8 7.9-4.2-12.8 10.9-7.7zM100.1 78.3l-4.2 12.8H82.7L93.4 99l-4.1 12.6 10.8-7.8 10.7 7.8-4-12.6 10.8-7.9h-13.4zM43.8 78.3l-4.3 12.8H26.3L37 99l-4 12.6 10.8-7.8 10.7 7.8L50.3 99l10.9-7.9H47.8zM156.4 78.3l-4 12.8h-13.5l10.9 7.9-4.2 12.6 10.8-7.8 10.9 7.8-4.2-12.6 10.8-7.9h-13.3zM212.8 78.3l-4.2 12.8h-13.2l10.7 7.9-4 12.6 10.7-7.8 10.8 7.8-4.2-12.6 10.9-7.9h-13.4zM43.8 27.7l-4.3 12.6H26.3L37 48.2l-4 12.7L43.8 53l10.7 7.9-4.2-12.7 10.9-7.9H47.8zM100.1 27.7l-4.2 12.6H82.7l10.7 7.9-4.1 12.7 10.8-7.9 10.7 7.9-4-12.7 10.8-7.9h-13.4zM156.4 27.7l-4 12.6h-13.5l10.9 7.9-4.2 12.7 10.8-7.9 10.9 7.9-4.2-12.7 10.8-7.9h-13.3zM212.8 27.7l-4.2 12.6h-13.2l10.7 7.9-4 12.7 10.7-7.9 10.8 7.9-4.2-12.7 10.9-7.9h-13.4z"
                    />
                  </g>
                </svg>
              </td>
              <td>
                img.lemde.fr
              </td>
              <td>
                151.101.210.217
              </td>
              <td>
                Newark
              </td>
              <td>
                États-Unis
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 0 513 342"
                >
                  <title>
                    États-Unis
                  </title>
                  <path
                    d="M0 0h513v342H0z"
                    fill="#FFF"
                  />
                  <g
                    fill="#D80027"
                  >
                    <path
                      d="M0 0h513v38H0zM0 76h513v38H0zM0 152h513v38H0zM0 228h513v38H0zM0 304h513v38H0z"
                    />
                  </g>
                  <path
                    d="M0 0h256.5v190H0z"
                    fill="#2E52B2"
                  />
                  <g
                    fill="#FFF"
                  >
                    <path
                      d="M47.8 141.9l-4-12.8-4.3 12.8H26.3l10.7 7.7-4 12.8 10.8-7.9 10.7 7.9-4.2-12.8 10.9-7.7zM104.2 141.9l-4.1-12.8-4.2 12.8H82.7l10.7 7.7-4.1 12.8 10.8-7.9 10.7 7.9-4-12.8 10.8-7.7zM160.6 141.9l-4.2-12.8-4 12.8h-13.5l10.9 7.7-4.2 12.8 10.8-7.9 10.9 7.9-4.2-12.8 10.8-7.7zM216.9 141.9l-4.1-12.8-4.2 12.8h-13.2l10.7 7.7-4 12.8 10.7-7.9 10.8 7.9-4.2-12.8 10.9-7.7zM100.1 78.3l-4.2 12.8H82.7L93.4 99l-4.1 12.6 10.8-7.8 10.7 7.8-4-12.6 10.8-7.9h-13.4zM43.8 78.3l-4.3 12.8H26.3L37 99l-4 12.6 10.8-7.8 10.7 7.8L50.3 99l10.9-7.9H47.8zM156.4 78.3l-4 12.8h-13.5l10.9 7.9-4.2 12.6 10.8-7.8 10.9 7.8-4.2-12.6 10.8-7.9h-13.3zM212.8 78.3l-4.2 12.8h-13.2l10.7 7.9-4 12.6 10.7-7.8 10.8 7.8-4.2-12.6 10.9-7.9h-13.4zM43.8 27.7l-4.3 12.6H26.3L37 48.2l-4 12.7L43.8 53l10.7 7.9-4.2-12.7 10.9-7.9H47.8zM100.1 27.7l-4.2 12.6H82.7l10.7 7.9-4.1 12.7 10.8-7.9 10.7 7.9-4-12.7 10.8-7.9h-13.4zM156.4 27.7l-4 12.6h-13.5l10.9 7.9-4.2 12.7 10.8-7.9 10.9 7.9-4.2-12.7 10.8-7.9h-13.3zM212.8 27.7l-4.2 12.6h-13.2l10.7 7.9-4 12.7 10.7-7.9 10.8 7.9-4.2-12.7 10.9-7.9h-13.4z"
                    />
                  </g>
                </svg>
              </td>
              <td>
                cdn.amplitude.com
              </td>
              <td>
                52.85.150.163
              </td>
              <td>
                ?
              </td>
              <td>
                États-Unis
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <svg
                  style={
                    Object {
                      "width": 60,
                    }
                  }
                  viewBox="0 85.333 512 341.333"
                >
                  <title>
                    Irlande
                  </title>
                  <path
                    d="M0 85.331h512v341.326H0z"
                    fill="#FFF"
                  />
                  <path
                    d="M0 85.331h170.663v341.337H0z"
                    fill="#6DA544"
                  />
                  <path
                    d="M341.337 85.331H512v341.337H341.337z"
                    fill="#FF9811"
                  />
                </svg>
              </td>
              <td>
                buf.lemonde.fr
              </td>
              <td>
                54.76.12.115
              </td>
              <td>
                Dublin
              </td>
              <td>
                Irlande
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        OWASP
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Scan de vulnérabiliés OWASP baseline
        </span>
        <a
          href="/report/aHR0cHM6Ly93d3cubGVtb25kZS5mcg==/zap.html"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                className="text-center"
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                risk/confidence
              </th>
              <th>
                name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  High (High)
                </span>
              </td>
              <td>
                PII Disclosure
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (High)
                </span>
              </td>
              <td>
                Sub Resource Integrity Attribute Missing
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (High)
                </span>
              </td>
              <td>
                Content Security Policy (CSP) Header Not Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                Cross-Domain Misconfiguration
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                X-Frame-Options Header Not Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                CSP: Wildcard Directive
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                CSP: style-src unsafe-inline
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                Reverse Tabnabbing
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                Vulnerable JS Library
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                CSP: script-src unsafe-inline
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (High)
                </span>
              </td>
              <td>
                In Page Banner Information Leak
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cookie Without SameSite Attribute
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Absence of Anti-CSRF Tokens
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cross-Domain JavaScript Source File Inclusion
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Incomplete or No Cache-control and Pragma HTTP Header Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Feature Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cookie No HttpOnly Flag
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                CSP: Notices
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                X-Content-Type-Options Header Missing
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Secure Pages Include Mixed Content
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cookie Without Secure Flag
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Low)
                </span>
              </td>
              <td>
                Dangerous JS Functions
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Retrieved from Cache
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Non-Storable Content
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Base64 Disclosure
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Storable and Cacheable Content
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Modern Web Application
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                Information Disclosure - Suspicious Comments
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                Timestamp Disclosure - Unix
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                User Controllable HTML Element Attribute (Potential XSS)
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                Loosely Scoped Cookie
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        Wappalyzer
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Détection des technologies
        </span>
      </div>
      <div
        className="card-body"
      >
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                style={
                  Object {
                    "width": 250,
                  }
                }
              >
                name
              </th>
              <th>
                categories
              </th>
              <th>
                website
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Varnish
              </td>
              <td>
                Caching
              </td>
              <td>
                <a
                  href="http://www.varnish-cache.org"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  http://www.varnish-cache.org
                </a>
              </td>
            </tr>
            <tr>
              <td>
                Sqreen
              </td>
              <td>
                Miscellaneous
              </td>
              <td>
                <a
                  href="https://sqreen.io"
                  rel="nopoener noreferrer"
                  target="_blank"
                >
                  https://sqreen.io
                </a>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
  </div>,
  " ",
]
`;

exports[`Tools config Should render Url with limited tools 1`] = `
Array [
  <div>
    <div
      className="jumbotron"
      style={
        Object {
          "height": 100,
          "marginBottom": 10,
          "marginTop": 10,
          "paddingTop": 20,
        }
      }
    >
      <h4>
        <a
          rel="noreferrer noopener"
          target="_blank"
        />
      </h4>
      <p>
        <a
          href="/category/presse"
          onClick={[Function]}
        >
          <span
            className="badge badge-success"
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            presse
          </span>
        </a>
        <a
          href="/tag/actu"
          onClick={[Function]}
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            actu
          </span>
        </a>
        <a
          href="/tag/fr"
          onClick={[Function]}
        >
          <span
            className="badge badge-info"
            style={
              Object {
                "marginRight": 5,
              }
            }
          >
            fr
          </span>
        </a>
        <span
          title="2021-04-04T13:30:42.164Z"
        >
          <svg
            fill="none"
            height={12}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            style={
              Object {
                "marginRight": 5,
              }
            }
            viewBox="0 0 24 24"
            width={12}
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <polyline
              points="12 6 12 12 16 14"
            />
          </svg>
          Mise à jour il y a :
           
          1 jour
        </span>
      </p>
    </div>
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        HTTP
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Informations collectées par le Mozilla HTTP observatory
        </span>
        <a
          href="https://observatory.mozilla.org/analyze/www.lemonde.fr"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <h3>
          Scan Summary : 
          <span
            className="badge badge-danger"
            style={
              Object {
                "fontSize": "1.1em",
                "minWidth": 60,
              }
            }
          >
            F
          </span>
        </h3>
        <br />
        <br />
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                impact
              </th>
              <th>
                id
              </th>
              <th>
                description
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <span
                  className="w-100 badge badge-danger"
                >
                  50
                </span>
              </td>
              <td>
                subresource-integrity
              </td>
              <td>
                Subresource Integrity (SRI) not implemented, and external scripts are loaded over HTTP or use protocol-relative URLs via src="//..."
              </td>
            </tr>
            <tr>
              <td>
                <span
                  className="w-100 badge badge-warning"
                >
                  25
                </span>
              </td>
              <td>
                content-security-policy
              </td>
              <td>
                Content Security Policy (CSP) header not implemented
              </td>
            </tr>
            <tr>
              <td>
                <span
                  className="w-100 badge badge-success"
                >
                  5
                </span>
              </td>
              <td>
                x-content-type-options
              </td>
              <td>
                X-Content-Type-Options header not implemented
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
    <div
      className="card"
      style={
        Object {
          "marginBottom": 20,
        }
      }
    >
      <div
        className="card-title h5"
        style={
          Object {
            "background": "#000091",
            "color": "white",
            "padding": 10,
          }
        }
      >
        OWASP
        <span
          style={
            Object {
              "fontSize": "0.6em",
              "fontWeight": "normal",
              "marginLeft": 10,
            }
          }
        >
          Scan de vulnérabiliés OWASP baseline
        </span>
        <a
          href="/report/dW5kZWZpbmVk/zap.html"
          rel="noreferrer noopener"
          style={
            Object {
              "color": "white",
              "float": "right",
            }
          }
          target="_blank"
        >
          <svg
            fill="none"
            height={24}
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
            />
            <polyline
              points="15 3 21 3 21 9"
            />
            <line
              x1="10"
              x2="21"
              y1="14"
              y2="3"
            />
          </svg>
        </a>
      </div>
      <div
        className="card-body"
      >
        <table
          className="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th
                className="text-center"
                style={
                  Object {
                    "width": 100,
                  }
                }
              >
                risk/confidence
              </th>
              <th>
                name
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  High (High)
                </span>
              </td>
              <td>
                PII Disclosure
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (High)
                </span>
              </td>
              <td>
                Sub Resource Integrity Attribute Missing
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (High)
                </span>
              </td>
              <td>
                Content Security Policy (CSP) Header Not Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                Cross-Domain Misconfiguration
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                X-Frame-Options Header Not Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                CSP: Wildcard Directive
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                CSP: style-src unsafe-inline
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                Reverse Tabnabbing
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                Vulnerable JS Library
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-danger"
                >
                  Medium (Medium)
                </span>
              </td>
              <td>
                CSP: script-src unsafe-inline
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (High)
                </span>
              </td>
              <td>
                In Page Banner Information Leak
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cookie Without SameSite Attribute
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Absence of Anti-CSRF Tokens
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cross-Domain JavaScript Source File Inclusion
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Incomplete or No Cache-control and Pragma HTTP Header Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Feature Policy Header Not Set
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cookie No HttpOnly Flag
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                CSP: Notices
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                X-Content-Type-Options Header Missing
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Secure Pages Include Mixed Content
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Medium)
                </span>
              </td>
              <td>
                Cookie Without Secure Flag
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-warning"
                >
                  Low (Low)
                </span>
              </td>
              <td>
                Dangerous JS Functions
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Retrieved from Cache
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Non-Storable Content
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Base64 Disclosure
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Storable and Cacheable Content
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Medium)
                </span>
              </td>
              <td>
                Modern Web Application
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                Information Disclosure - Suspicious Comments
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                Timestamp Disclosure - Unix
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                User Controllable HTML Element Attribute (Potential XSS)
              </td>
            </tr>
            <tr>
              <td
                className="text-center"
              >
                <span
                  className="w-100 badge badge-info"
                >
                  Informational (Low)
                </span>
              </td>
              <td>
                Loosely Scoped Cookie
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <br />
  </div>,
  " ",
]
`;
